# Point2Skill_github

./: .gitignore  README.md  README_alaitz.md  README_recorder.md  finetune.py  finetune_contact.py  run_training.py
dit-policy/converters/: README.md  convert_franka_to_robobuf_goal.py  convert_to_robobuf_contact.py  convert_to_robobuf_contact_hindsight.py
dit-policy/demos/: annotate_contact_pixels.py
dit-policy/eval_scripts/: README.md  eval_franka_2cam_contact.py  eval_franka_2cam_contact_place.py  eval_franka_2cam_place_contact.py  eval_franka_env_2cam_contact.py
dit-policy/experiments/: finetune_contact.yaml
dit-policy/install/: local_setup.sh  setup.bash
dit_policy/: finetune_contact.py
policy/: README.md  Readme.odt  finetune_contact.py  run_training.py
policy/converters/: README.md  convert_to_robobuf_contact_hindsight.py  convert_to_robobuf_contact_hindsight_copy.py  convert_to_robobuf_place_hindsight.py  convert_to_robobuf_place_physical_open.py
policy/data4robotics/: Readme_alaitz.md  replay_buffer_contact.py  replay_buffer_unet_contact.py  task_contact.py
vlm_service/: README.md  run_planner.sh
vlm_service/service_language/: package.xml  setup.cfg  setup.py
vlm_service/service_language/launch/: language.launch.py
vlm_service/service_language/src/service_language/: language_publisher.py  language_publisher_answer.py
vlm_service/service_planner/: package.xml  planner.py  setup.cfg  setup.py
vlm_service/service_planner/launch/: planner.launch.py
vlm_service/service_planner/src/service_planner/: image2numpy.py  planner.py
(+1278 files in other folders)
