<?xml version="1.0"?>
<package format="3">
  <name>service_language</name>
  <version>0.0.1</version>
  <description>ROS2 port of service_language (ament_python)</description>
  <maintainer email="you@todo.todo">labiiwa</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
