<?xml version="1.0"?>
<package format="3">
  <name>service_planner</name>
  <version>0.0.1</version>
  <description>VLM-based task planner that maps natural language to trained diffusion policies</description>
  <maintainer email="aatxag@mondragon.edu">labiiwa</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
